# hello-world

./: README.md  regex_test.cc
Python/: fileSelect.py  readMe.txt
SimpleFactory/: factory.cc  factory.h  fruit.h  readMe.txt  test.cc
TencentCloud/: myl.sh  myz.sh
TencentCloud/lrvalue/: a.out  lr1.cc  lr2.cc
cmake/: read_cmake.txt
cmake/cmake01/: CMakeLists.txt
cmake/cmake01/src/: CMakeLists.txt  slave.cc
cmake/cmake02/: CMakeLists.txt  main.cc
cmake/cmake03/: a.out  main.cc
cmake/cmake04/: CMakeLists.txt  base.cc  base.h  derive.cc  derive.h  main.cc
cmake/cmake05/: CMakeLists.txt  main.cc
cmake/include/: slave.h
googleTest/: read_googletest.txt
googleTest/1_google/: CMakeLists.txt  baseInterface.h  main.cc  mockBase.h
googleTest/2_google/: CMakeLists.txt  main.cc  useDerive.cc  useDerive.h
googleTest/3_google/: CMakeLists.txt  derive.h  main.cc
googleTest/4_googletest/: CMakeLists.txt  main.cc
googleTest/5_googletest/: baseInterface.h  main.cc  mockDerive.h  simple1  simple1.cc  simple1_test.cc
googleTest/6_googletest/: CMakeLists.txt  main.cc  mockBase.h  mockDerive.cc  sample2.cc  sample2.h
googleTest/7_googletest/: CMakeLists.txt  derive.cc  derive.h  main.cc  sample2.cc  sample2.h
googleTest/8_googletest/: CMakeLists.txt  baseInterface.h  derive.cc  derive.h  main.cc  mockBase.h  useDerive.cc  useDerive.h
googleTest/9_googletest/: CMakeLists.txt  baseInterface.h  main.cc  mockBase.h  sample.cc  sample.h
ipc/: posix_rec  posix_rec.cc  posix_send  posix_send.cc  readMe.txt  systemv_rec.cc  systemv_send.cc
signals/: signal.txt
signals/signal/src/: signalBell.h  students.cc  students.h  teachers.cc  teachers.h
signals/signal1/src/: main.cc  signalBell.h  students.cc  students.h  teachers.cc
signals/signal2/src/: main.cc  signalBell.h  students.cc  students.h  teachers.cc  teachers.h
signals/signal3/: CMakeLists.txt
signals/signal3/src/: main.cc  signalBell.h  signals.h  students.cc  students.h  teachers.cc  teachers.h
signals/signal4/src/: CMakeLists.txt  (+5 more)
(+11 files in other folders)
