
ADD_LIBRARY(slave_static STATIC slave.cc)

SET_TARGET_PROPERTIES(slave_static PROPERTIES OUTPUT_NAME "slave")
SET_TARGET_PROPERTIES(slave_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)


ADD_LIBRARY(slave SHARED slave.cc)

SET_TARGET_PROPERTIES(slave PROPERTIES OUTPUT_NAME "slave")
SET_TARGET_PROPERTIES(slave PROPERTIES CLEAN_DIRECT_OUTPUT 1)

#INSTALL(FILES slave.h DESTINATION /home/sl/cpluscplus/cmake/include)
#INSTALL(TARGETS slave_static ARCHIVE DESTINATION /home/sl/cpluscplus/cmake/lib)
#INSTALL(TARGETS slave        LIBRARY DESTINATION /home/sl/cpluscplus/cmake/lib)
INSTALL(FILES slave.h DESTINATION include)
INSTALL(TARGETS slave_static ARCHIVE DESTINATION lib)
INSTALL(TARGETS slave        LIBRARY DESTINATION lib)
